<resources>
    <string name="app_name">Formula1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_year">search year</string>
    <string name="act2_title">Title</string>
    <string name="act2_description">Description</string>
    <string name="act2_keyword">Keyword</string>
    <string name="act2_create_button">Create</string>
    <string name="string_hint">Enter Your Text Here</string>
    <string name="btn_comment">Send</string>
</resources>